# value_props_pipeline

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: pipeline_pandas.py  pipeline_pyspark.py
original_pipelines/: pipeline_pandas.py  pipeline_pyspark.py
scripts/: cleanup.py  compare_pipelines.py  run_spark_pipeline.py
src/: config.py  feature_engineering.py  io_utils.py  pipeline.py  spark_pipeline.py  utils.py
tests/: test_pipeline.py
